Fix style issue on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: 'Poppins', sans-serif;
-  padding: 20px 0;
+  font-family: "Poppins", sans-serif;
+  padding: 30px 0 100px 0;
   background: linear-gradient(45deg, #152a31, #1e6680);
-  height: 100vh;
+  height: 100%;
 }
 
 .turn-notification {
